[tool.poetry]
name = "redun-utils"
version = "0.0.1"
description = ""
authors = ["Rico Meinl <rico@retro.bio>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
hera-workflows = "^3.6.3"
python-dotenv = "^0.20.0"
click = "^8.1.3"
google-auth = "^2.10.0"
kubernetes = "^25.3.0"
redun = {git = "https://github.com/retrobiosciences/redun.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
